--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta property="og:title" content="Pookie's Journal - AI-Powered Daily Reflection" />
     <meta property="og:description" content="Your thoughts, beautifully captured with AI-powered insights" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
